[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/RunRoot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GameRoot.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HubRoot.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Items/ItemDisplayHUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/BossRoot.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/Pizel.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0.0313726, 0.333333, 0.384314, 1 )
font_data = ExtResource( 6 )

[node name="GameRoot" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDisplayHUD" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
margin_bottom = 32.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Use arrow keys to move[/center]"
text = "Use arrow keys to move"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RunRoot" parent="." instance=ExtResource( 1 )]

[node name="HubRoot" parent="." instance=ExtResource( 3 )]

[node name="BossRoot" parent="." instance=ExtResource( 5 )]

[node name="ControlsTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="active_slot_picked" from="CanvasLayer/ItemDisplayHUD" to="." method="_on_ItemDisplayHUD_active_slot_picked"]
[connection signal="closed" from="CanvasLayer/ItemDisplayHUD" to="." method="_on_ItemDisplayHUD_closed"]
[connection signal="opened" from="CanvasLayer/ItemDisplayHUD" to="." method="_on_ItemDisplayHUD_opened"]
[connection signal="boss_room_entered" from="RunRoot" to="." method="_on_RunRoot_boss_room_entered"]
[connection signal="player_killed" from="RunRoot" to="." method="_on_RunRoot_player_killed"]
[connection signal="started" from="RunRoot" to="." method="_on_RunRoot_started"]
[connection signal="stopped" from="RunRoot" to="." method="_on_RunRoot_stopped"]
[connection signal="item_selected" from="HubRoot" to="." method="_on_HubRoot_item_selected"]
[connection signal="run_start_entered" from="HubRoot" to="." method="_on_HubRoot_run_start_entered"]
[connection signal="started" from="HubRoot" to="." method="_on_HubRoot_started"]
[connection signal="stopped" from="HubRoot" to="." method="_on_HubRoot_stopped"]
[connection signal="player_killed" from="BossRoot" to="." method="_on_BossRoot_player_killed"]
[connection signal="player_wins" from="BossRoot" to="." method="_on_BossRoot_player_wins"]
[connection signal="started" from="BossRoot" to="." method="_on_BossRoot_started"]
[connection signal="stopped" from="BossRoot" to="." method="_on_BossRoot_stopped"]
[connection signal="timeout" from="ControlsTimer" to="." method="_on_ControlsTimer_timeout"]
